# chisw_test_task

./: CMakeLists.txt  Header_file.cpp  Header_file.h  find_dependencies.cpp  find_dependencies.h  find_file.cpp  find_file.h  main.cpp
temp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  allstatlib.vcxproj  allstatlib.vcxproj.filters  chisw_test_task_final.sln  cmake_install.cmake  find_dep.vcxproj  find_dep.vcxproj.filters
